2002-09-13  John Levon  <levon@movementarian.org>

	* acinclude.m4: another tweak
 
2002-09-13  Philippe Elie  <phil.el@wanadoo.fr>

	* Makefile.in: never remove doc/oprofile.html.
	* acinclude.m4: small work-around for sed-related problem

2002-09-12  Will Cohen  <wcohen@redhat.com>

	* Makefile.in: Separate kernel and user code build rules.

2002-09-12  Will Cohen  <wcohen@redhat.com>
 
	* libutil++/child_reader.h (child_reader): Add missing "std::".
	* libutil++/child_reader.cpp (error_str): Ditto.
 
2002-09-12  John Levon  <levon@movementarian.org>

	* acinclude.m4: update from upstream
 
2002-09-12  John Levon  <levon@movementarian.org>

	* acinclude.m4: fix moc2/moc conflict, cache val
 
2002-09-12  Philippe Elie  <phil.el@wanadoo.fr>

	* libutil++/child_reader.cpp:
	* libutil++/child_reader.h: fix for child terminated by a signal
	* gui/oprof_start_util.cpp:
	* pp/op_to_source.cpp: use the the new child_reader interface

2002-09-11  John Levon  <levon@movementarian.org>

	* acinclude.m4:
	* configure.in:
	* gui/Makefile.in: replace with new Qt configure script
 
2002-09-11  Philippe Elie  <phil.el@wanadoo.fr>

	* acinclude.m4: fix qt3 detection in some corner case.

2002-09-11  Philippe Elie  <phil.el@wanadoo.fr>

	* pp/samples_container.cpp:
	* pp/samples_container.h: Check at run time we don't try to use an
	  unitialized samples_container_t.

2002-09-11  Philippe Elie  <phil.el@wanadoo.fr>

	* pp/op_time.cpp: exit sooner when no samples files are available.

2002-09-09  Will Cohen  <wcohen@redhat.com>

	* dae/opd_kernel.c (struct opd_module): 
	  (kernel_start, kernel_end):
	  (opd_parse_kernel_range):
	  (opd_drop_module_sample):
	  (opd_find_module_by_eip):
	  (opd_handle_module_sample):
	  (opd_handle_kernel_sample):
	  (opd_eip_is_kernel):
	* dae/opd_kernel.h (opd_handle_kernel_sample):
	  (opd_eip_is_kernel):
	* dae/opd_mapping.c (opd_put_mapping):
	* dae/opd_mapping.h (struct opd_map):
	  (opd_is_in_map):
	  (opd_map_offset):